Prevent pre tags from wrapping.  Issue #1089

--- a/iOS/Resources/styleSheet.css
+++ b/iOS/Resources/styleSheet.css
@@ -114,12 +114,21 @@ h1 {
 	line-height: 1.15em;
 	font-weight: bold;
 }
+pre {
+	max-width: 100%;
+	margin: 0;
+	overflow: auto;
+	overflow-y: hidden;
+	line-height: 20px;
+	border: 1px solid #777;
+	word-wrap: normal;
+	word-break: normal;
+	-webkit-hyphens: none;
+}
 code, pre {
 	font-family: "SF Mono", Menlo, "Courier New", Courier, monospace;
 	font-size: 14px;
-}
-pre  {
-	white-space: pre-wrap;
+	padding: 5px;
 }
 img, figure, video, iframe, div {
 	max-width: 100%;
